set image preview (hopefully), moved dropdown menu, dropdown now has text instead of just numbers by ✨templating✨, changed alignment of my pic, now using grid layout for ffolder (thanks Gill), edited intro text, stop hyperlinks overflow

--- a/templates/static/standards.css
+++ b/templates/static/standards.css
@@ -86,6 +86,8 @@ tbody > tr:nth-child(even) {
 
 a {
   color: black;
+  /*don't overflow the parent div:*/
+  word-wrap: break-word;
 }
 
 /* from https://www.w3schools.com/howto/howto_css_center-vertical.asp
@@ -142,16 +144,16 @@ svg.bi-book {
 }
 
 .horizontally-centered {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-content: center;
+  display: grid;
+  grid-gap: 2em;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  justify-items: center;
 }
 
 @media (min-width: 500px) {
   .horizontally-centered {
     margin: auto;
-    width: 35%;
+    width: 70%;
   }
 }
 
@@ -191,11 +193,9 @@ img.intro_pic {
       width: 30px;
       z-index: 2;
   }
-}
 
-@media (min-width: 500px) and (max-width: 600px) {
-  .intro_pic {
-    margin-left: 10%;
+  .intro_content .manila {
+    border-radius: 15px 0px 0px 15px;
   }
 }
 
@@ -208,7 +208,15 @@ img.intro_pic {
 @media (max-width: 600px) {
   img.intro_pic {
     max-height: 75vh;
-    max-width: 90vw;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+  }
+  div.intro_pic{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   img {
@@ -217,6 +225,10 @@ img.intro_pic {
 
   #paperclip {
     display: none;
+  }
+
+  .intro_content .manila {
+    border-radius: 8px 8px 8px 8px;
   }
 
   .horizontally-centered, footer {
@@ -276,10 +288,6 @@ div.main {
     box-shadow: 3px 4px 10px rgb(0 0 0 / 50%);
     border-radius: 0px 15px 15px 0px;
   }
-
-  .intro_content .manila {
-    border-radius: 15px 0px 0px 15px;
-  }
 }
 
 @media (min-width: 1600px) {
@@ -329,13 +337,13 @@ div.main {
 
 @media(max-width: 400px) {
   .manila {
-  padding-left: 0.8em;
-  padding-right: 0.5em;
-}
+    padding-left: 0.8em;
+    padding-right: 0.5em;
+  }
   .intro-content {
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  align-content: center;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    align-content: center;
   }
 }
 
@@ -491,7 +499,18 @@ nav ul > li a:hover, nav ul > li a:focus {
     background-color: #f8d775;
     display: none;
     z-index: 1;
+    width: 200%;
+    margin-left: -50%;
+    box-shadow: 3px 3px rgba(0,0,0,0.2);
 }
+.standards_folder .dropdown-content {
+  /*transform: translateY(-325px);*/
+  top: -137%;
+  position: absolute;
+  text-align: start;  
+  box-shadow: 3px -1px rgba(0,0,0,0.2);
+}
+
 .dropdown-content a {
     color: black;
     padding: 5px 12px;
